<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wang.testface.VerifyUserActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="0.6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/acount"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/verify_user_account_ev"
            android:hint="@string/input_acount"
            android:inputType="text"
            android:layout_weight="7"
            android:background="@drawable/text_border"
            android:layout_margin="2dp"
            android:padding="4dp"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:background="@color/hui"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <ImageView
        android:id="@+id/verify_user_iv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_weight="3"
        android:background="@drawable/text_border"
        android:padding="4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/verify_user_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/verify_user_getPhoto_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/getPhoto" />

        <Button
            android:id="@+id/verify_user_startCamera_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/start_camera" />
    </LinearLayout>
</LinearLayout>
