<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wang.testface.DetectFaceActivity">

    <LinearLayout
        android:layout_weight="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/detect_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/isPhoto" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="2dp"
        android:padding="4dp"
        android:background="@drawable/text_border"
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ScrollView
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/detect_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:layout_weight="1"
            android:text="@string/getPhoto"
            android:id="@+id/detect_photo_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:layout_weight="1"
            android:text="@string/start_camera"
            android:id="@+id/detect_camera_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>
</LinearLayout>
